--- a/Project/templates/index.html
+++ b/Project/templates/index.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <h1 style="color: goldenrod;">Welcome to the Bzzman's Crypto Trading Bot (3)({{TRADE_SYMBOL}})</h1>
+    <h1 style="color: goldenrod;">Welcome to the Bzzman's Crypto Trading Bot ({{TRADE_SYMBOL}})</h1>
     <h3 style="color: goldenrod;">Woof Woof!</h3>
     <img src="{{url_for('static', filename='tenor.gif')}}" alt="To The Moon" width="400" height="300"">
 
